--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
@@ -19,6 +19,7 @@
   <table class="table table-bordered table-sm table-responsive" style="border: none">
     <thead>
     <tr>
+      <th></th>
       <th>Id</th>
       <th>Kapcsolat</th>
       <th>Tipus</th>
@@ -29,6 +30,9 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of projektkapcsolatservice.Dto; let i = index">
+      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer;padding-left: 8px;padding-right: 8px"
+          (click)="levalasztas(i)">
+          <i class="fa fa-minus" aria-hidden="true"></i></td>
       <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
           (click)="setClickedRow(i)">{{item.PROJEKTKAPCSOLATKOD}}</td>
       <td>{{item.KAPCSOLAT}}</td>
