--- a/src/app/irat/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat/irat-egy/irat-egy.component.html
@@ -1,6 +1,7 @@
 <div class="alapkeret">
   <h5>{{iratservice.cim}}</h5>
   <h6 *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELNEV}}, {{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELCIM}}</h6>
+  <h6 *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].IRATTIPUS}}, {{iratservice.Dto[iratservice.DtoSelectedIndex].TARGY}}</h6>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
