--- a/src/app/projekt/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
+++ b/src/app/projekt/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-4">
         <div *ngFor="let entry of entries" class="form-check">
           <input class="form-check-input" type="radio" name="radiogroup" id="entry"
-                 [checked]="entry === projektservice.DtoEdited.MUSZAKIALLAPOT || ''" (change)="change(entry)">
+                 [checked]="entry === selected" (change)="change(entry)">
           <label class="form-check-label" for="entry">
             {{entry}}
           </label>
