--- a/src/app/projekt/projekt/projekt-statusz/projekt-statusz.component.html
+++ b/src/app/projekt/projekt/projekt-statusz/projekt-statusz.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-4">
         <div *ngFor="let entry of entries;let i = index" class="form-check">
           <input class="form-check-input" type="radio" name="radiogroup" id="entry"
-                 [checked]="i === projektservice.DtoEdited.STATUSZ" (change)="change(i)">
+                 [checked]="i === selected" (change)="change(i)">
           <label class="form-check-label" for="entry">
             {{entry}}
           </label>
