--- a/src/app/projekt/projekttoolbar/projekttoolbar.component.html
+++ b/src/app/projekt/projekttoolbar/projekttoolbar.component.html
@@ -26,7 +26,7 @@
       <button [disabled]="!enUj" (click)="doUj()" type="button" style="margin-right:3px;" class="btn btn-sm btn-outline-primary">
         <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
-      <button class="btn btn-sm btn-outline-primary" type="button">
+      <button (click)="doExport()" class="btn btn-sm btn-outline-primary" type="button">
         Export
       </button>
     </div>
