--- a/src/app/riport/tartozas/tartozas.component.html
+++ b/src/app/riport/tartozas/tartozas.component.html
@@ -16,7 +16,7 @@
     <div class="row no-gutters" style="margin-bottom: 10px">
       <div class="col-md-2"></div>
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="megsem()">Mégsem</button>
+      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="megsem()">Stop</button>
     </div>
   </form>
   <app-errormodal [cim]="riportservice.cim"></app-errormodal>
