--- a/src/app/afakulcs/afakulcs-list/afakulcs-list.component.html
+++ b/src/app/afakulcs/afakulcs-list/afakulcs-list.component.html
@@ -28,3 +28,4 @@
   </table>
   <app-errormodal [cim]="afakulcsservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
