--- a/src/app/projekt/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt/projekt-list/projekt-list.component.html
@@ -19,4 +19,6 @@
   </app-toolbarfooter>
   <app-errormodal [cim]="projektservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
+
 
