--- a/src/app/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -33,3 +33,4 @@
   </form>
   <app-errormodal [cim]="afakulcsservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
