--- a/src/app/projekt/projekt/projekt-export/projekt-export.component.html
+++ b/src/app/projekt/projekt/projekt-export/projekt-export.component.html
@@ -16,4 +16,5 @@
   </form>
   <app-errormodal [cim]="projektservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
 
