--- a/src/app/irat/dokumentum/dokumentum-list/dokumentum-list.component.html
+++ b/src/app/irat/dokumentum/dokumentum-list/dokumentum-list.component.html
@@ -27,3 +27,4 @@
   </table>
   <app-errormodal [cim]="dokumentumservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
