--- a/src/app/irat/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/irat/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -19,3 +19,4 @@
   </form>
   <app-errormodal [cim]="dokumentumservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
