--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
@@ -45,3 +45,4 @@
   </table>
   <app-errormodal [cim]="projektkapcsolatservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
