--- a/src/app/bizonylat/bizonylat-container/bizonylat-container.component.html
+++ b/src/app/bizonylat/bizonylat-container/bizonylat-container.component.html
@@ -19,3 +19,6 @@ Uj = 3
 <ng-container *ngIf="bizonylatservice.ContainerMode === 3">
   <app-bizonylat-szerkesztes></app-bizonylat-szerkesztes>
 </ng-container>
+
+<app-errormodal></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
