--- a/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
+++ b/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
@@ -1,6 +1,17 @@
 <div class="alapkeret">
-  <app-bizonylattoolbar></app-bizonylattoolbar>
-  <app-bizonylattabla></app-bizonylattabla>
-  <app-errormodal [cim]="bizonylatservice.cim"></app-errormodal>
+  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}}</h5>
+  <app-bizonylattoolbar [Szurok]="szurok"
+                        [(szempont)]="bizonylatservice.szempont"
+                        [(minta)]="bizonylatservice.minta"
+                        [enKereses]="!eppFrissit" (Kereses)="onKereses()"
+                        [enUj]="!eppFrissit" (Uj)="onUj()">
+  </app-bizonylattoolbar>
+  <app-bizonylattabla [Dto]="bizonylatservice.Dto" (idclick)="setClickedRow($event)"></app-bizonylattabla>
+  <app-toolbarfooter [enKereses]="!bizonylatservice.elsokereses && !eppFrissit"
+                     [rekordszam]="bizonylatservice.Dto.length"
+                     [osszesrekord]="bizonylatservice.OsszesRekord"
+                     (KeresesTovabb)="onKeresesTovabb()">
+  </app-toolbarfooter>
+  <app-errormodal [cim]="bizonylatservice.bizonylatLeiro.BizonylatNev"></app-errormodal>
 </div>
 <app-spinner *ngIf="eppFrissit"></app-spinner>
