--- a/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
+++ b/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
@@ -1,3 +1,41 @@
-<p>
-  bizonylattabla works!
-</p>
+<table class="table table-bordered table-sm table-responsive" style="border: none">
+  <thead>
+  <tr>
+    <th>Id</th>
+    <th>Sorszám</th>
+    <th>Ügyfél</th>
+    <th>A bizonylat kelte</th>
+    <th>A teljesítés kelte</th>
+    <th>Fizetési mód</th>
+    <th>Fizetési határidő</th>
+    <th>Pénznem</th>
+    <th>Árfolyam</th>
+    <th>Netto</th>
+    <th>ÁFA</th>
+    <th>Brutto</th>
+  </tr>
+  </thead>
+  <tbody>
+  <ng-container *ngFor="let item of Dto; let i = index">
+    <tr>
+      <td *ngIf="enIdclick" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.BIZONYLATKOD}}</td>
+      <td *ngIf="!enIdclick">{{item.BIZONYLATKOD}}</td>
+      <td>{{item.BIZONYLATSZAM}}</td>
+      <td>
+        <div style="width: 200px">{{item.UGYFELNEV}}</div>
+      </td>
+
+      <td>{{item.BIZONYLATKELTE | datehun}}</td>
+      <td>{{item.TELJESITESKELTE | datehun}}</td>
+      <td>{{item.FIZETESIMOD}}</td>
+      <td>{{item.FIZETESIHATARIDO | datehun}}</td>
+      <td>{{item.PENZNEM}}</td>
+      <td style="text-align: right">{{item.ARFOLYAM | number: '1.2-2'}}</td>
+      <td style="text-align: right">{{item.NETTO | number: '1.2-2'}}</td>
+      <td style="text-align: right">{{item.AFA | number: '1.2-2'}}</td>
+      <td style="text-align: right">{{item.BRUTTO | number: '1.2-2'}}</td>
+    </tr>
+  </ng-container>
+  </tbody>
+</table>
+
