--- a/src/app/navexportellenorzes/navexportellenorzes.component.html
+++ b/src/app/navexportellenorzes/navexportellenorzes.component.html
@@ -44,4 +44,5 @@
   </app-toolbarfooter>
   <app-errormodal [cim]="navexportellenorzesservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
 
