--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-ujajanlat-szerkesztes/projekt-bizonylatesirat-ujajanlat-szerkesztes.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-ujajanlat-szerkesztes/projekt-bizonylatesirat-ujajanlat-szerkesztes.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="cikk"
-               maxlength="30" required autocomplete="off" style="background-color: aquamarine"
+               maxlength="30" autocomplete="off" style="background-color: aquamarine"
                [(ngModel)]="projektkapcsolatservice.AjanlatParam.AjanlatBuf[projektkapcsolatservice.AjanlattetelIndex].CikkNev" name="cikk">
       </div>
       <div class="col-md-1">
@@ -17,39 +17,42 @@
       </div>
     </div>
 
-<!--    <div class="row no-gutters editform-row">
+    <div class="row no-gutters editform-row">
       <div class="col-md-2">
-        <div class="editform-title">Irány</div>
+        <div class="editform-title">Mennyiség</div>
       </div>
       <div class="col-md-2">
-        <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="projektkapcsolatservice.UjIratDto.IRANY" name="irany">
-          <option>Be</option>
-          <option>Ki</option>
-          <option>Belső</option>
-        </select>
+        <input type="number" class="form-control form-control-sm" id="mennyiseg"
+               [(ngModel)]="projektkapcsolatservice.AjanlatParam.AjanlatBuf[projektkapcsolatservice.AjanlattetelIndex].Mennyiseg" name="mennyiseg">
       </div>
     </div>
     <div class="row no-gutters editform-row">
       <div class="col-md-2">
-        <div class="editform-title">Keletkezett</div>
+        <div class="editform-title">Egységár</div>
       </div>
       <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="keletkezett"
-               [(ngModel)]="Keletkezett" name="keletkezett">
+        <input type="number" class="form-control form-control-sm" id="egysegar"
+               [(ngModel)]="projektkapcsolatservice.AjanlatParam.AjanlatBuf[projektkapcsolatservice.AjanlattetelIndex].EgysegAr" name="egysegar">
       </div>
     </div>
-
     <div class="row no-gutters editform-row">
       <div class="col-md-2">
-        <div class="editform-title">Tárgy</div>
+        <div class="editform-title">Egységnyi teljesítmény</div>
       </div>
-      <div class="col-md-4">
-        <input type="text" class="form-control form-control-sm" id="targy"
-               maxlength="200" required autocomplete="off"
-               [(ngModel)]="projektkapcsolatservice.UjIratDto.TARGY" name="targy">
+      <div class="col-md-2">
+        <input type="number" class="form-control form-control-sm" id="egysegnyi"
+               [(ngModel)]="projektkapcsolatservice.AjanlatParam.AjanlatBuf[projektkapcsolatservice.AjanlattetelIndex].EgysegnyiTeljesitmeny" name="egysegnyi">
       </div>
-    </div>-->
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Garancia</div>
+      </div>
+      <div class="col-md-2">
+        <input type="number" class="form-control form-control-sm" id="garancia"
+               [(ngModel)]="projektkapcsolatservice.AjanlatParam.AjanlatBuf[projektkapcsolatservice.AjanlattetelIndex].Garancia" name="garancia">
+      </div>
+    </div>
 
     <div class="row no-gutters" style="margin-bottom: 10px">
       <div class="col-md-2"></div>
@@ -70,6 +73,7 @@
     <app-cikk-container></app-cikk-container>
   </ng-container>
 
-  <app-errormodal [cim]="'Új irat'"></app-errormodal>
+  <app-errormodal [cim]="projektkapcsolatservice.AjanlatParam.AjanlatBuf[projektkapcsolatservice.AjanlattetelIndex].TetelTipus"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
 
