--- a/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
+++ b/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
@@ -1,3 +1,36 @@
-<p>
-  bizonylat-egy works!
-</p>
+<div class="alapkeret">
+  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}}</h5>
+  <div>
+    <nav>
+      <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
+      </button>
+      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+      </button>
+
+      <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-minus" aria-hidden="true"></i>
+      </button>
+      <button [disabled]="eppFrissit" (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-edit" aria-hidden="true"></i>
+      </button>
+
+      <button [disabled]="eppFrissit" (click)="nyomtatas()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-print" style="margin-right: 3px" aria-hidden="true"></i>Nyomtatás
+      </button>
+
+      <button [disabled]="eppFrissit" (click)="tetelek()" class="btn btn-sm btn-outline-primary navgomb">
+        Tételek
+      </button>
+      <button [disabled]="eppFrissit" (click)="kifizetes()" class="btn btn-sm btn-outline-primary navgomb">
+        Kifizetés
+      </button>
+      <button [disabled]="eppFrissit" (click)="irat()" class="btn btn-sm btn-outline-primary navgomb">
+        Irat
+      </button>
+    </nav>
+  </div>
+  <app-errormodal [cim]="bizonylatservice.bizonylatLeiro.BizonylatNev"></app-errormodal>
+</div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
