--- a/src/app/irat/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat/irat-egy/irat-egy.component.html
@@ -1,7 +1,23 @@
 <div class="alapkeret">
   <h5>{{iratservice.cim}}</h5>
-  <h6 *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELNEV}}, {{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELCIM}}</h6>
-  <h6 *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].IRATTIPUS}}, {{iratservice.Dto[iratservice.DtoSelectedIndex].TARGY}}</h6>
+  <!--<h6 *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELNEV}}, {{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELCIM}}</h6>
+  <h6 *ngIf="iratservice.DtoSelectedIndex !== -1">{{iratservice.Dto[iratservice.DtoSelectedIndex].IRATTIPUS}}, {{iratservice.Dto[iratservice.DtoSelectedIndex].TARGY}}</h6>-->
+  <table class="table ng table-bordered table-sm table-responsive" style="border: none">
+    <tbody>
+    <tr>
+      <td class="egylabel">Irattipus:</td>
+      <td class="egylabel">{{iratservice.Dto[iratservice.DtoSelectedIndex].IRATTIPUS}}</td>
+    </tr>
+    <tr>
+      <td class="egylabel">Ügyfél:</td>
+      <td class="egylabel">{{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELNEV}}, {{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELCIM}}</td>
+    </tr>
+    <tr>
+      <td class="egylabel">Tárgy:</td>
+      <td class="egylabel">{{iratservice.Dto[iratservice.DtoSelectedIndex].TARGY}}</td>
+    </tr>
+    </tbody>
+  </table>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
