--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-container/projekt-bizonylatesirat-container.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-container/projekt-bizonylatesirat-container.component.html
@@ -14,6 +14,7 @@ export enum BizonylatesIratContainerMode {
   <app-projekt-bizonylatesirat-list></app-projekt-bizonylatesirat-list>
 </ng-container>
 <ng-container *ngIf="projektkapcsolatservice.ContainerMode === 2">
+  <app-bizonylat-egy></app-bizonylat-egy>
 </ng-container>
 <ng-container *ngIf="projektkapcsolatservice.ContainerMode === 3">
   <app-irat-egy></app-irat-egy>
