--- a/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
@@ -10,36 +10,36 @@
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
 
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="stsz()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="stsz()" class="btn btn-sm btn-outline-primary navgomb">
         Stsz
       </button>
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="muszakiallapot()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="muszakiallapot()" class="btn btn-sm btn-outline-primary navgomb">
         Műszaki állapot
       </button>
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="inverter()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="inverter()" class="btn btn-sm btn-outline-primary navgomb">
         Inverter
       </button>
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="napelem()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="napelem()" class="btn btn-sm btn-outline-primary navgomb">
         Napelem
       </button>
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="iratminta()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="iratminta()" class="btn btn-sm btn-outline-primary navgomb">
         Iratminta
       </button>
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="bizonylatesirat()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="bizonylatesirat()" class="btn btn-sm btn-outline-primary navgomb">
         Bizonylat és irat
       </button>
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="szamlazasirend()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="szamlazasirend()" class="btn btn-sm btn-outline-primary navgomb">
         Számlázási rend
       </button>
-      <button [disabled]="eppFrissit || projektservice.uj" (click)="teendo()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="teendo()" class="btn btn-sm btn-outline-primary navgomb">
         Teendő
       </button>
     </nav>
