--- a/src/app/bizonylat/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
+++ b/src/app/bizonylat/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
@@ -8,9 +8,9 @@
         <div class="editform-title">Nyomtatás</div>
       </div>
       <div class="col-md-4">
-        <div *ngFor="let entry of entries" class="form-check">
+        <div *ngFor="let entry of entries;let i = index" class="form-check">
           <input class="form-check-input" type="radio" name="radiogroup" id="entry"
-                 [checked]="entry === selected" (change)="change(entry)">
+                 [checked]="i === selectedi" (change)="change(i)">
           <label class="form-check-label" for="entry">
             {{entry}}
           </label>
@@ -21,9 +21,9 @@
     <div class="row no-gutters" style="margin-bottom: 10px">
       <div class="col-md-2"></div>
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" [disabled]="!eppFrissit" style="margin-left:3px;" type="button" (click)="stop()">Stop</button>
+      <button class="btn btn-sm btn-default" [disabled]="!eppFrissit" style="margin-left:3px;" type="button" (click)="megsem()">Stop</button>
     </div>
   </form>
-  <app-errormodal [cim]="bizonylatservice.cim"></app-errormodal>
+  <app-errormodal [cim]="'Nyomtatás'"></app-errormodal>
 </div>
 
