--- a/src/app/bizonylat/bizonylatirat/bizonylat-irat-container/bizonylat-irat-container.component.html
+++ b/src/app/bizonylat/bizonylatirat/bizonylat-irat-container/bizonylat-irat-container.component.html
@@ -1,3 +1,17 @@
-<p>
-  bizonylat-irat-container works!
-</p>
+<!--
+export enum BizonylatKapcsolatContainerMode {
+Blank = 0,
+List = 1,
+Egy = 2,
+Uj = 3
+}-->
+
+<ng-container *ngIf="bizonylatkapcsolatservice.ContainerMode === 1">
+  <app-bizonylat-irat-list></app-bizonylat-irat-list>
+</ng-container>
+<ng-container *ngIf="bizonylatkapcsolatservice.ContainerMode === 2">
+
+</ng-container>
+<ng-container *ngIf="bizonylatkapcsolatservice.ContainerMode === 3">
+
+</ng-container>
